# silent-circle

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  bot.py  database.py  docker-compose.yml  requirements.txt
backend/: .env.example  .env.test  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: applications.py  chats.py  subscriptions.py  users.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0282ac293420_add_default_to_submitted_at.py  0675626b5989_add_submitted_at_default.py  112527f306db_init_schema.py
backend/app/models/: __init__.py  application.py  base.py  chat.py  feedback.py  subscription.py  user.py
backend/app/schemas/: application.py  chat.py  feedback.py  subscription.py  user.py
backend/app/services/: application_service.py  chat_service.py  subscription_service.py  user_service.py
backend/tests/: conftest.py
backend/tests/integration/api/: test_applications.py  test_chats.py  test_subscriptions.py  test_users.py
backend/tests/integration/services/: test_application_service.py  test_chat_service.py  test_subscription_service.py  test_user_service.py
devops/compose/: docker-compose.test.yml
docs/: architecture.md  db-schema.md  roadmap.md
