[project]
name = "silent-circle-backend"
version = "0.1.0"
description = "Silent Circle backend: FastAPI + aiogram + PostgreSQL + Redis"
authors = [
    {name = "BloodCharry",email = "vladvorobei1994@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
