[project]
name = "silent-circle-backend"
version = "0.1.0"
description = "Silent Circle backend: FastAPI + aiogram + PostgreSQL + Redis"
authors = [
    {name = "BloodCharry",email = "vladvorobei1994@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
packages = [{ include = "app" }]
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)"
]

[tool.poetry.dependencies]
python = "^3.11"

# Web framework
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }

# Telegram bot
aiogram = "^3.10.0"

# Database
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
asyncpg = "^0.29.0"

# Redis / background tasks
redis = "^5.0.4"
celery = "^5.4.0"
apscheduler = "^3.10.4"

# Data validation
pydantic = "^2.8.0"
pydantic-settings = "^2.3.0"

# Security
python-jose = "^3.3.0"
passlib = "^1.7.4"

# Utils
httpx = "^0.27.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
black = "^24.4.0"
flake8 = "^7.0.0"
isort = "^5.13.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
